<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9F9"
    tools:context=".ui.QuestionDetailActivity">

   <TextView
       android:id="@+id/questionId"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_1"
       android:layout_marginTop="10dp"
       android:textColor="#101010"
       android:textSize="18sp"
       android:textStyle="bold"/>

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/questionId"
        android:text="@string/a_confusing_question"
        android:textColor="#101010"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/questionBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/what_is_the_difference_between_java_and_javascript"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/questionTitle"
        android:textColor="#151515" />

    <TextView
        android:id="@+id/questionPostedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/posted_by_jonah_makori"
        android:textColor="#040080"
        android:textStyle="bold"
        android:layout_below="@id/questionBody"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/questionPostedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_13_07_2020_n_at_11_04pm"
        android:layout_below="@id/questionBody"
        android:textColor="#040080"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="300dp"
        android:fontFamily="sans-serif-light"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/separationLineDetail"
        android:layout_gravity="center"
        android:layout_below="@+id/questionPostedAt"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"/>

 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/answersRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="443dp"
     android:layout_below="@id/separationLineDetail"
     android:layout_alignParentEnd="true"
     android:layout_marginTop="4dp" />

 <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/addAnswerButton"
     android:layout_alignParentEnd="true"
     android:layout_alignParentBottom="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:layout_marginTop="595dp"
     android:layout_marginEnd="8dp"
     android:backgroundTint="@color/primary_text"
     app:srcCompat="@drawable/button_answer" />

</RelativeLayout>

</ScrollView>
